# uniclipboard-desktop

./: .coderabbit.yaml  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  README_ZH.md  docker-compose.seq.yml  index.html  package-lock.json  package.json  preview-panel.html  quick-panel.html  tailwind.config.js  tsconfig.json  vite.config.ts
src-tauri/: AGENTS.md  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/uc-app/: Cargo.toml
src-tauri/crates/uc-app/src/: app_paths.rs  deps.rs  lib.rs  runtime.rs  task_registry.rs  testing.rs
src-tauri/crates/uc-app/src/realtime/: mod.rs  pairing_consumer.rs  peers_consumer.rs  setup_consumer.rs  setup_state_consumer.rs
src-tauri/crates/uc-app/src/usecases/: AGENTS.md  auto_unlock_encryption_session.rs  delete_clipboard_entry.rs  initialize_encryption.rs  mod.rs  start_clipboard_watcher.rs  verify_keychain_access.rs
src-tauri/crates/uc-app/tests/: app_lifecycle_coordinator_test.rs  app_lifecycle_status_test.rs  clipboard_sync_e2e_test.rs  realtime_consumers.rs  setup_flow_integration_test.rs  snapshot_cache_integration_test.rs  stress_test.rs  sync_outbound_policy_test.rs
src-tauri/crates/uc-bootstrap/: Cargo.toml
src-tauri/crates/uc-bootstrap/src/: assembly.rs  background_tasks.rs  builders.rs  config.rs  config_resolution.rs  init.rs  lib.rs  non_gui_runtime.rs  tracing.rs
src-tauri/crates/uc-cli/: Cargo.toml
src-tauri/crates/uc-cli/src/: daemon_client.rs  exit_codes.rs  local_daemon.rs  main.rs  output.rs  ui.rs
src-tauri/crates/uc-cli/src/commands/: clipboard.rs  devices.rs  mod.rs  setup.rs  space_status.rs  start.rs  status.rs  stop.rs
src-tauri/crates/uc-cli/tests/: cli_smoke.rs  setup_cli.rs
src-tauri/crates/uc-core/: Cargo.toml
src-tauri/crates/uc-core/src/blob/: mod.rs
src-tauri/crates/uc-core/src/clipboard/: integration_mode.rs  link_utils.rs  mod.rs  system.rs
src-tauri/crates/uc-core/src/config/: mod.rs
src-tauri/crates/uc-core/src/network/: daemon_api_strings.rs  events.rs  mod.rs  paired_device.rs  pairing_state_machine.rs  protocol_ids.rs
src-tauri/crates/uc-core/src/ports/: app_dirs.rs  blob_store.rs  cache_fs.rs  clipboard_transport.rs  file_manager.rs  file_transfer_repository.rs  file_transport.rs  host_event_emitter.rs  mod.rs  network.rs  network_events.rs  paired_device_repository.rs  pairing_transport.rs  peer_directory.rs  realtime.rs  start_clipboard_watcher.rs  transfer_progress.rs
src-tauri/crates/uc-core/src/security/: aad.rs  filename_validation.rs  mod.rs
src-tauri/crates/uc-core/src/settings/: channel.rs  content_type_filter.rs  defaults.rs  mod.rs  model.rs
src-tauri/crates/uc-core/src/setup/: state.rs  state_machine.rs
src-tauri/crates/uc-core/tests/: realtime_port.rs
src-tauri/crates/uc-daemon/: Cargo.toml
src-tauri/crates/uc-daemon-client/: Cargo.toml
src-tauri/crates/uc-daemon-client/src/: connection.rs  daemon_lifecycle.rs  lib.rs  realtime.rs  ws_bridge.rs
src-tauri/crates/uc-daemon-client/src/http/: mod.rs  pairing.rs  query.rs  setup.rs
src-tauri/crates/uc-daemon/src/: app.rs  lib.rs  main.rs  process_metadata.rs  service.rs  socket.rs  state.rs  worker.rs
src-tauri/crates/uc-daemon/src/api/: auth.rs  event_emitter.rs  mod.rs  pairing.rs  query.rs  routes.rs  server.rs  types.rs  ws.rs
src-tauri/crates/uc-daemon/src/pairing/: host.rs  mod.rs  session_projection.rs
src-tauri/crates/uc-daemon/src/peers/: monitor.rs
src-tauri/crates/uc-daemon/src/rpc/: handler.rs  server.rs  types.rs
src-tauri/crates/uc-daemon/src/workers/: clipboard_watcher.rs  file_sync_orchestrator.rs  inbound_clipboard_sync.rs  mod.rs  peer_discovery.rs
src-tauri/crates/uc-daemon/tests/: api_auth.rs  api_query.rs  http_api.rs  pairing_api.rs  pairing_host.rs  pairing_ws.rs  setup_api.rs  websocket_api.rs
src-tauri/crates/uc-infra/: Cargo.toml
src-tauri/crates/uc-infra/migrations/2026-03-04-000001_blob_v2_binary_format/: down.sql  up.sql
src-tauri/crates/uc-infra/migrations/2026-03-11-000001_add_paired_device_sync_settings/: down.sql  up.sql
src-tauri/crates/uc-infra/migrations/2026-03-13-000001_create_file_transfer/: down.sql  up.sql
src-tauri/crates/uc-infra/migrations/2026-03-15-000002_upgrade_file_transfer_tracking/: down.sql  up.sql
src-tauri/crates/uc-infra/src/blob/: blob_writer.rs
src-tauri/crates/uc-infra/src/clipboard/: background_blob_worker.rs  change_origin.rs  chunked_transfer.rs  durable_spool_queue.rs  mod.rs  normalizer.rs  thumbnail_generator.rs
src-tauri/crates/uc-infra/src/db/: pool.rs  schema.rs
src-tauri/crates/uc-infra/src/fs/: cache_fs.rs  key_slot_store.rs  mod.rs
src-tauri/crates/uc-infra/src/security/: decrypting_clipboard_event_repo.rs  decrypting_representation_repo.rs  encrypted_blob_store.rs  encrypting_clipboard_event_writer.rs  encryption_session.rs  encryption_state.rs  mod.rs  (+1 more)
src-tauri/crates/uc-infra/tests/: blob_repo_test.rs
src-tauri/crates/uc-observability/: Cargo.toml
src-tauri/crates/uc-observability/src/: clef_format.rs  context.rs  flow.rs  format.rs  init.rs  lib.rs  profile.rs  span_fields.rs  stages.rs
src-tauri/crates/uc-platform/: AGENTS.md  Cargo.toml
src-tauri/crates/uc-platform/src/: app_dirs.rs  file_manager.rs  identity_store.rs  lib.rs  system_secure_storage.rs  test_support.rs
src-tauri/crates/uc-platform/tests/: blob_store_test.rs  runtime_test.rs  watcher_control_test.rs
src-tauri/crates/uc-tauri/: AGENTS.md  Cargo.toml
src-tauri/crates/uc-tauri/src/: lib.rs  protocol.rs  test_utils.rs  tray.rs
src-tauri/crates/uc-tauri/tests/: bootstrap_integration_test.rs  clipboard_commands_stats_favorites_test.rs  command_error_test.rs  daemon_bootstrap_contract.rs  daemon_command_shell.rs  daemon_exit_cleanup.rs  daemon_ws_bridge.rs  identifier_consistency.rs  integration_clipboard_capture.rs  lifecycle_command_contract_test.rs  models_serialization_test.rs  pairing_bridge.rs  sentry_tracing_integration.rs  spool_cleanup_test.rs  task_registry_test.rs  usecases_accessor_test.rs
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+1320 files in other folders)
