[package]
name = "uniclipboard"
version = "0.1.0-alpha.4"
description = "一个剪切板同步工具"
authors = ["mkdir700@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "uniclipboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ===== Workspace crates =====
uc-core = { path = "crates/uc-core" }
uc-app = { path = "crates/uc-app" }
uc-platform = { path = "crates/uc-platform" }
uc-infra = { path = "crates/uc-infra" }
uc-tauri = { path = "crates/uc-tauri" }

# ===== Tauri 相关依赖 =====
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-stronghold = "2"

# ===== 异步运行时 =====
tokio = { version = "1.28", features = ["full"] }

# ===== 错误处理 =====
anyhow = "1.0"

# ===== 异步特性 =====
async-trait = "0.1"

# ===== 序列化 =====
serde_json = "1"

# ===== 日志 =====
tracing = "0.1"

[features]
cargo-clippy = []

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "z"   # Optimize for binary size
strip = true      # Remove debug symbols

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = { version = "0.3", features = ["objc2-core-foundation"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

[dev-dependencies]
tempfile = "3.2"
tokio = { version = "1", features = ["full"] }

[workspace]
members = [
  "crates/uc-core",
  "crates/uc-app",
  "crates/uc-platform",
  "crates/uc-infra",
  "crates/uc-clipboard-probe",
  "crates/uc-tauri",
]
resolver = "2"

# Dependencies for workspace crates, mainly for tauri plugins
[workspace.dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
