[package]
name = "uc-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core domain models
uc-core = { path = "../uc-core" }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"

# Logging
log = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.17"
futures = "0.3.31"
tracing = "0.1.44"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"

[dependencies.uuid]
version = "1.10.0"
features = ["v4"]

[dev-dependencies]
uc-infra = { path = "../uc-infra" }
uc-platform = { path = "../uc-platform" }
mockall = "0.13"
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image = "0.25"
