[package]
name = "uc-cli"
version.workspace = true
edition = "2021"
description = "Command-line interface for UniClipboard"

[[bin]]
name = "uniclipboard-cli"
path = "src/main.rs"

[dependencies]
uc-bootstrap = { path = "../uc-bootstrap" }
uc-observability = { path = "../uc-observability" }
uc-app = { path = "../uc-app" }
uc-core = { path = "../uc-core" }
uc-daemon = { path = "../uc-daemon" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
tracing = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"
libc = "0.2"
