[package]
name = "uc-observability"
version = "0.1.0"
edition = "2021"
description = "Observability infrastructure for UniClipboard: dual-output tracing with profile-based filtering"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "chrono", "json", "registry"] }
tracing-appender = "0.2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
anyhow = "1.0"
uuid = { version = "1", features = ["v7"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "chrono", "json", "registry"] }
tempfile = "3"
