[package]
name = "uc-platform"
version = "0.1.0"
edition = "2021"
description = "Platform-specific implementations for UniClipboard (clipboard, security, storage)"

[features]
test-helpers = []

[dependencies]
# Workspace crates
uc-core = { path = "../uc-core" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["io", "io-util", "compat"] }
futures = "0.3"

# Error handling
anyhow = "1.0"

# Logging
log = "0.4"
tracing = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Networking
libp2p = { version = "0.56", features = [
  "tokio",
  "tcp",
  "noise",
  "yamux",
  "mdns",
  "identify",
  "macros",
  "request-response",
  "quic",
] }
libp2p-request-response = { version = "0.29", features = ["json"] }
libp2p-stream = "0.4.0-alpha"

# Encryption
sha2 = "0.10"
base64 = "0.22"
subtle = "2.5"

# Clipboard
clipboard-rs = { version = "0.3.3", features = ["default"] }
arboard = "3.4"

# Image handling
image = "0.25"
png = "0.18"

# File system
dirs = "6.0"

# UUID
uuid = { version = "1", features = ["v4", "fast-rng"] }

# Random number generation
rand = "0.9"

# Network utilities
local-ip-address = "0.6"

# Byte handling
bytes = "1.7"

# Hashing
blake3 = "1.8.2"

# Platform-specific
libc = "0.2"

# Utilities
once_cell = "1.19"
keyring = { version = "3.6.3", features = [
  "apple-native",
  "windows-native",
  "linux-native-sync-persistent",
] }
thiserror = "2.0.17"
iota_stronghold = "2.1"

[dev-dependencies]
tempfile = "3"
mockall = "0.13"

[target.'cfg(windows)'.dependencies]
clipboard-win = { version = "5.4" }
