[package]
name = "uc-tauri"
version = "0.1.0"
edition = "2021"
description = "Tauri adapter layer for UniClipboard"

[dependencies]
# Workspace crates
uc-core = { path = "../uc-core" }
uc-app = { path = "../uc-app" }
uc-infra = { path = "../uc-infra" }
uc-platform = { path = "../uc-platform" }

# System utilities
gethostname = "1.1"

# Tauri
tauri = { workspace = true }
tauri-plugin-autostart = { workspace = true }
tauri-plugin-updater = "2"
url = "2"

# Async
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
log = "0.4"
dirs = "6.0.0"
tauri-plugin-log = "2"
chrono = { version = "0.4", features = ["serde"] }

# Tracing support
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "chrono"] }
tracing-log = "0.2"
tracing-appender = "0.2"
sentry = { version = "0.46.1", features = ["tracing"] }
sentry-tracing = "0.46.1"

[dev-dependencies]
uc-platform = { path = "../uc-platform", features = ["test-helpers"] }
sentry = { version = "0.46.1", features = ["test"] }
tauri = { workspace = true, features = ["test"] }
tempfile = "3"
