[package]
name = "uc-tauri"
version = "0.1.0"
edition = "2021"
description = "Tauri adapter layer for UniClipboard"

[dependencies]
# Workspace crates
uc-core = { path = "../uc-core" }
uc-app = { path = "../uc-app" }
uc-infra = { path = "../uc-infra" }
uc-platform = { path = "../uc-platform" }
uc-observability = { path = "../uc-observability" }
uc-bootstrap = { path = "../uc-bootstrap" }
uc-daemon = { path = "../uc-daemon" }

# System utilities
gethostname = "1.1"
uuid = { version = "1", features = ["v4", "fast-rng"] }

# Tauri
tauri = { workspace = true }
tauri-plugin-autostart = { workspace = true }
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
url = "2"

# Async
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
base64 = "0.22"

# Hashing
blake3 = "1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
log = "0.4"
dirs = "6.0.0"
tauri-plugin-log = "2"
chrono = { version = "0.4", features = ["serde"] }

# Tracing support
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
tracing-log = "0.2"
sentry = { version = "0.46.1", features = ["tracing"] }
sentry-tracing = "0.46.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSEvent", "NSScreen", "NSPanel", "NSResponder", "NSWindow"] }
core-graphics = "0.24"
objc2-foundation = { version = "0.3", features = ["NSGeometry"] }

[dev-dependencies]
uc-platform = { path = "../uc-platform", features = ["test-helpers"] }
sentry = { version = "0.46.1", features = ["test"] }
tauri = { workspace = true, features = ["test"] }
tempfile = "3"
